# time-manager

./: .gitignore  CHANGELOG.md  CONTEXT.md  CRITIC_CONTEXT.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
config/: dev-config.toml  time-manager.toml
docs/: ARCHITECTURE.md
src/time_manager/: __init__.py  __main__.py  main.py
src/time_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/time_manager/constants/: __init__.py
src/time_manager/discrimination/: __init__.py
src/time_manager/engine/: __init__.py  live_time_engine.py
src/time_manager/fusion/: __init__.py
src/time_manager/interfaces/: __init__.py  timing_result.py
src/time_manager/output/: __init__.py  chrony_shm.py  health_server.py  shm_writer.py
src/time_manager/timing/: __init__.py  chu_fsk_decoder.py  clock_convergence.py  ionospheric_model.py  phase2_temporal_engine.py  tone_detector.py  transmission_time_solver.py  wwv_bcd_encoder.py  wwv_constants.py  wwv_geographic_predictor.py  wwv_test_signal.py  wwvh_discrimination.py
src/time_manager/timing/interfaces/: __init__.py  data_models.py  tone_detection.py
src/time_manager/web/: __init__.py  web_server.py
src/time_manager/web/static/css/: styles.css
src/time_manager/web/static/js/: discrimination-charts.js  timing-visualizations.js
src/time_manager/web/templates/: discrimination.html  time.html
systemd/: time-manager.service
tests/: __init__.py  conftest.py  test_chrony_shm.py  test_health_server.py  test_live_time_engine.py  test_transmission_time_solver.py
